# sewer-system

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt  开发文档_排水管道缺陷检测评估一体化系统.md
backend/: main.py
backend/config/: settings.yaml
backend/models/: schemas.py  session.py
backend/routers/: __init__.py  batch.py  chat.py  config.py  report.py
backend/services/: batch_engine.py  chat_engine.py  detector.py  knowledge_base.py  llm_provider.py  prior_converter.py  prompts.py  report_generator.py
backend/services/tools/: __init__.py  base.py  image_assessment.py  report_generation.py  standard_query.py
data/knowledge_base/: cjj181_2012.json
frontend/: next.config.js  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/batch/: page.tsx
frontend/app/chat/: page.tsx
frontend/app/settings/: page.tsx
frontend/lib/: api.ts  store.ts
