[project]
name = "pipe-ai"
version = "2.0.0"
description = "排水管道缺陷智能检测与评估一体化系统"
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi>=0.115.0,<0.137",
    "uvicorn>=0.49.0",
    "python-multipart>=0.0.32",
    "websockets>=16.0",
    "ultralytics>=8.4.0",
    "Pillow>=12.2.0",
    "opencv-python>=4.13.0",
    "openai>=2.44.0",
    "langchain-core>=1.4.0",
    "langchain-openai>=1.3.0",
    "langgraph>=1.2.0",
    "python-docx>=1.2.0",
    "pyyaml>=6.0.3",
    "tqdm>=4.68.0",
    "loguru>=0.7.3",
]

[project.optional-dependencies]
unsloth = [
    "unsloth>=2026.6.0",
    "peft>=0.19.0",
]
vllm = [
    "vllm>=0.23.0",
]

[dependency-groups]
dev = []

[tool.uv]
conflicts = [
    [
        { extra = "unsloth" },
        { extra = "vllm" },
    ],
]
